--- a/chatapp-frontend/src/index.css
+++ b/chatapp-frontend/src/index.css
@@ -7,7 +7,18 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body,
+html,
+#root{
+  height: 100%
 }
+
+body,
+html {
+  height: 100%;
+  background-color: #1a1a1a;
+  font-family: 'Inter';
+  color:#fff;
+}
+
+
